--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <title>Lettie Jane Rennekamp — Tarot</title>
   </head>
-  <body style="background-color: beige">
+  <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
