--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-    <title>Lettie Jane Rennekamp — Tarot</title>
+    <title>Lettie Jane Rennekamp — Oracle</title>
   </head>
   <body>
     <div id="app"></div>
